--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+/* ============================================================================= */
+
+/* Custom Css  */
+
+.resultAppJs{
+  padding: 50px;
+}
+
+.statusMain{
+  border: 1px solid;
+  padding: 31px;
+  text-align: center;
+  background-color: black;
+  /* margin-top: 100px; */
+  margin: 120px 5px 0px 5px;
+}
+
+.status{
+  border: 2px solid;
+  padding: 10px;
+  margin-right: 10px !important;
+  font-weight: bold;
+  color: rgba(0, 140, 255, 0.76);
+  text-transform: uppercase;
+
+}
+.Question{
+  padding: 30px;
+}
